src/aniva/dev/core.h

#define DRIVER_URL_SEPERATOR '/'
#define DRIVER_TYPE_COUNT 9
#define DT_DISK 0
#define DT_FS 1
#define DT_IO 2
#define DT_SOUND 3
#define DT_GRAPHICS 4
#define DT_SERVICE 5
#define DT_DIAGNOSTICS 6
#define DT_OTHER 7
#define DRV_INFINITE            0xFFFFFFFF
#define DRV_SERVICE_MAX         0x100
#define drv_manifest_SOFTMAX    512
#define MAX_DRIVER_NAME_LENGTH          128
#define MAX_DRIVER_DESCRIPTOR_LENGTH    64  /* Descriptions should be short, simple and effective */
/*
#define DRIVER_NAME(name) static const char* SECTION(".drv_name") __exported_drv_name USED = (const char*)(name)

#define DRIVER_FLAGS(flags) static const uint32_t SECTION(".drv_flags") __exported_drv_flags USED = (uint32_t)(flags)
#define DRIVER_MSG(msg_fn) static FuncPtr SECTION(".drv_msg") __exported_msg_fn USED = (FuncPtr)(msg_fn)
#define DRIVER_INIT(init_fn) static FuncPtr SECTION(".drv_init") __exported_init_fn USED = (FuncPtr)(init_fn)
#define DRIVER_EXIT(exit_fn) static FuncPtr SECTION(".drv_exit")__exported_exit_fn USED = (FuncPtr)(exit_fn)
*/

#define NO_MANIFEST NULL