rust/lightos/bindings/raw_lightos_bindings.rs

/* automatically generated by rust-bindgen 0.69.4 */

#[repr(C)]
#[derive(Default)]
pub struct __IncompleteArrayField<T>(::std::marker::PhantomData<T>, [T; 0]);
impl<T> __IncompleteArrayField<T> {
    #[inline]
    pub const fn new() -> Self {
        __IncompleteArrayField(::std::marker::PhantomData, [])
    }
    #[inline]
    pub fn as_ptr(&self) -> *const T {
        self as *const _ as *const T
    }
    #[inline]
    pub fn as_mut_ptr(&mut self) -> *mut T {
        self as *mut _ as *mut T
    }
    #[inline]
    pub unsafe fn as_slice(&self, len: usize) -> &[T] {
        ::std::slice::from_raw_parts(self.as_ptr(), len)
    }
    #[inline]
    pub unsafe fn as_mut_slice(&mut self, len: usize) -> &mut [T] {
        ::std::slice::from_raw_parts_mut(self.as_mut_ptr(), len)
    }
}
impl<T> ::std::fmt::Debug for __IncompleteArrayField<T> {
    fn fmt(&self, fmt: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        fmt.write_str("__IncompleteArrayField")
    }
}
pub const NULL: u32 = 0;
pub const true_: u32 = 1;
pub const false_: u32 = 0;
pub const Kib: u32 = 1024;
pub const Mib: u32 = 1048576;
pub const Gib: u32 = 1073741824;
pub const Tib: u64 = 1099511627776;
pub const LOGGER_MAX_COUNT: u32 = 255;
pub const LOGGER_FLAG_DEBUG: u32 = 1;
pub const LOGGER_FLAG_INFO: u32 = 2;
pub const LOGGER_FLAG_WARNINGS: u32 = 4;
pub const LOGGER_FLAG_NO_PREFIX: u32 = 8;
pub const LOG_TYPE_DEFAULT: u32 = 0;
pub const LOG_TYPE_LINE: u32 = 1;
pub const LOG_TYPE_CHAR: u32 = 2;
pub const KERR_FATAL_BIT: u32 = 2147483648;
pub const KERR_NONE: u32 = 0;
pub const KERR_INVAL: u32 = 1;
pub const KERR_IO: u32 = 2;
pub const KERR_NOMEM: u32 = 3;
pub const KERR_MEM: u32 = 4;
pub const KERR_NODEV: u32 = 5;
pub const KERR_DEV: u32 = 6;
pub const KERR_NODRV: u32 = 7;
pub const KERR_DRV: u32 = 8;
pub const KERR_NOCON: u32 = 9;
pub const KERR_NOT_FOUND: u32 = 10;
pub const KERR_SIZE_MISMATCH: u32 = 11;
pub const KERR_NULL: u32 = 12;
pub const KERR_DUPLICATE: u32 = 13;
pub const EOP_ERROR: u32 = 0;
pub const EOP_NOMEM: u32 = 1;
pub const EOP_INVAL: u32 = 2;
pub const EOP_BUSY: u32 = 3;
pub const EOP_NODEV: u32 = 4;
pub const EOP_NOCON: u32 = 5;
pub const EOP_NULL: u32 = 6;
pub const DRIVER_URL_SEPERATOR: u8 = 47u8;
pub const DRIVER_TYPE_COUNT: u32 = 9;
pub const DRIVER_MAX_DEV_COUNT: u32 = 64;
pub const DT_DISK: u32 = 0;
pub const DT_FS: u32 = 1;
pub const DT_IO: u32 = 2;
pub const DT_SOUND: u32 = 3;
pub const DT_GRAPHICS: u32 = 4;
pub const DT_SERVICE: u32 = 5;
pub const DT_DIAGNOSTICS: u32 = 6;
pub const DT_OTHER: u32 = 7;
pub const DT_FIRMWARE: u32 = 8;
pub const DRV_INFINITE: u32 = 4294967295;
pub const DRV_SERVICE_MAX: u32 = 256;
pub const drv_manifest_SOFTMAX: u32 = 512;
pub const MAX_DRIVER_NAME_LENGTH: u32 = 128;
pub const MAX_DRIVER_DESCRIPTOR_LENGTH: u32 = 64;
pub const EXPSYM_SHDR_NAME: &[u8; 8] = b".expsym\0";
pub const NO_MANIFEST: u32 = 0;
pub const DRVDEP_FLAG_RELPATH: u32 = 1;
pub const DRVDEP_FLAG_OPTIONAL: u32 = 2;
pub const DRV_FS: u32 = 1;
pub const DRV_NON_ESSENTIAL: u32 = 2;
pub const DRV_ACTIVE: u32 = 4;
pub const DRV_ALLOW_DYNAMIC_LOADING: u32 = 8;
pub const DRV_HAS_HANDLE: u32 = 16;
pub const DRV_FAILED: u32 = 32;
pub const DRV_DEFERRED: u32 = 64;
pub const DRV_LIMIT_REACHED: u32 = 128;
pub const DRV_WANT_PROC: u32 = 256;
pub const DRV_HAD_DEP: u32 = 512;
pub const DRV_SYSTEM: u32 = 1024;
pub const DRV_ORPHAN: u32 = 2048;
pub const DRV_IS_EXTERNAL: u32 = 4096;
pub const DRV_HAS_MSG_FUNC: u32 = 8192;
pub const DRV_DEFERRED_HNDL: u32 = 16384;
pub const DRV_CORE: u32 = 32768;
pub const DRV_LOADED: u32 = 65536;
pub const DRV_STAT_OK: u32 = 0;
pub const DRV_STAT_INVAL: i32 = -1;
pub const DRV_STAT_NOMAN: i32 = -2;
pub const DRV_STAT_BUSY: i32 = -3;
pub const PDE_PRESENT: u32 = 1;
pub const PDE_WRITABLE: u32 = 2;
pub const PDE_USER: u32 = 4;
pub const PDE_WRITE_THROUGH: u32 = 8;
pub const PDE_NO_CACHE: u32 = 16;
pub const PDE_ACCESSED: u32 = 32;
pub const PDE_DIRTY: u32 = 64;
pub const PDE_HUGE_PAGE: u32 = 128;
pub const PDE_GLOBAL: u32 = 256;
pub const PDE_NX: i64 = -9223372036854775808;
pub const PTE_PRESENT: u32 = 1;
pub const PTE_WRITABLE: u32 = 2;
pub const PTE_USER: u32 = 4;
pub const PTE_WRITE_THROUGH: u32 = 8;
pub const PTE_NO_CACHE: u32 = 16;
pub const PTE_ACCESSED: u32 = 32;
pub const PTE_DIRTY: u32 = 64;
pub const PTE_PAT: u32 = 128;
pub const PTE_GLOBAL: u32 = 256;
pub const PTE_NX: i64 = -9223372036854775808;
pub const MALLOC_NODE_FLAG_USED: u32 = 1;
pub const MALLOC_NODE_FLAG_PARITY: u32 = 2;
pub const MALLOC_NODE_FLAG_READONLY: u32 = 4;
pub const MALLOC_NODE_FLAGS_MASK: u32 = 7;
pub const MALLOC_NODE_SIZE_MASK: i32 = -8;
pub const GHEAP_READONLY: u32 = 1;
pub const GHEAP_KERNEL: u32 = 2;
pub const GHEAP_EXPANDABLE: u32 = 4;
pub const GHEAP_ZEROED: u32 = 8;
pub const GHEAP_NOBLOCK: u32 = 16;
pub type uint_t = ::std::os::raw::c_uint;
pub type bool_ = u8;
pub type vaddr_t = usize;
pub type paddr_t = usize;
pub type va_list = __builtin_va_list;
pub type FuncPtr = ::std::option::Option<unsafe extern "C" fn()>;
pub type logger_id_t = u8;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct logger_t {
    pub title: *mut ::std::os::raw::c_char,
    pub flags: u8,
    pub id: logger_id_t,
    pub f_logc: ::std::option::Option<
        unsafe extern "C" fn(c: ::std::os::raw::c_char) -> ::std::os::raw::c_int,
    >,
    pub f_log: ::std::option::Option<
        unsafe extern "C" fn(str_: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int,
    >,
    pub f_logln: ::std::option::Option<
        unsafe extern "C" fn(str_: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int,
    >,
}
#[test]
fn bindgen_test_layout_logger_t() {
    const UNINIT: ::std::mem::MaybeUninit<logger_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<logger_t>(),
        40usize,
        concat!("Size of: ", stringify!(logger_t))
    );
    assert_eq!(
        ::std::mem::align_of::<logger_t>(),
        8usize,
        concat!("Alignment of ", stringify!(logger_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).title) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(logger_t),
            "::",
            stringify!(title)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).flags) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(logger_t),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).id) as usize - ptr as usize },
        9usize,
        concat!(
            "Offset of field: ",
            stringify!(logger_t),
            "::",
            stringify!(id)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).f_logc) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(logger_t),
            "::",
            stringify!(f_logc)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).f_log) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(logger_t),
            "::",
            stringify!(f_log)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).f_logln) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(logger_t),
            "::",
            stringify!(f_logln)
        )
    );
}
extern "C" {
    pub fn init_early_logging();
}
extern "C" {
    pub fn init_logging();
}
extern "C" {
    pub fn register_logger(logger: *mut logger_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn unregister_logger(logger: *mut logger_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn logger_get(id: logger_id_t, buffer: *mut logger_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn logger_scan(
        title: *mut ::std::os::raw::c_char,
        buffer: *mut logger_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn logger_swap_priority(old: logger_id_t, new: logger_id_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn log(msg: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn logf(fmt: *const ::std::os::raw::c_char, ...);
}
extern "C" {
    pub fn vlogf(fmt: *const ::std::os::raw::c_char, args: *mut __va_list_tag);
}
extern "C" {
    pub fn logln(msg: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn log_ex(
        id: logger_id_t,
        msg: *const ::std::os::raw::c_char,
        args: *mut __va_list_tag,
        type_: u8,
    );
}
extern "C" {
    pub fn sfmt(
        buf: *mut ::std::os::raw::c_char,
        fmt: *const ::std::os::raw::c_char,
        ...
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn kputch(c: ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn print(msg: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn println(msg: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn printf(fmt: *const ::std::os::raw::c_char, ...) -> ::std::os::raw::c_int;
}

extern "C" {
    pub fn vprintf(
        fmt: *const ::std::os::raw::c_char,
        args: *mut __va_list_tag,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn kdbgf(fmt: *const ::std::os::raw::c_char, ...) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn vkdbgf(
        prefix: bool_,
        fmt: *const ::std::os::raw::c_char,
        args: *mut __va_list_tag,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn kdbgln(msg: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn kdbg(msg: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn kdbgc(c: ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn kwarnf(fmt: *const ::std::os::raw::c_char, ...) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn kwarnln(msg: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn kwarn(msg: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn kwarnc(c: ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
pub type kerror_t = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct kerror_frame {
    pub code: kerror_t,
    pub ctx: *const ::std::os::raw::c_char,
    pub prev: *mut kerror_frame,
}
#[test]
fn bindgen_test_layout_kerror_frame() {
    const UNINIT: ::std::mem::MaybeUninit<kerror_frame> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<kerror_frame>(),
        24usize,
        concat!("Size of: ", stringify!(kerror_frame))
    );
    assert_eq!(
        ::std::mem::align_of::<kerror_frame>(),
        8usize,
        concat!("Alignment of ", stringify!(kerror_frame))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).code) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(kerror_frame),
            "::",
            stringify!(code)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ctx) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(kerror_frame),
            "::",
            stringify!(ctx)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).prev) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(kerror_frame),
            "::",
            stringify!(prev)
        )
    );
}
pub type kerror_frame_t = kerror_frame;
extern "C" {
    pub fn init_kerror();
}
extern "C" {
    pub fn push_kerror(err: kerror_t, ctx: *const ::std::os::raw::c_char) -> kerror_t;
}
